--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Gallery</string>
+    <string name="iv_type_content_descriptor">An image depending on the element type</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
