--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Galeria</string>
     <string name="iv_type_content_descriptor">Una imatge depenent del tipus d\'element</string>
+    <string name="menu_item_info">Info</string>
 </resources>
