--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="iv_type_content_descriptor">An image depending on the element type</string>
     <string name="title_activity_maps">Map</string>
     <string name="menu_item_info">Info</string>
+    <string name="provider_authority">ibanez.jacob.cat.xtec.ioc.gallery.fileprovider</string>
 </resources>
